Update Swiper configuration and CSS styles

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                                 </svg>
                                 <div class="flex flex-col gap-2 mt-4">
                                     <span class="font-medium text-white">Formations</span>
-                                    <span class="text-gray-300 text-sm">Lorem ipsum dolor sit amet consectetur
+                                    <span class="text-gray-100 text-sm">Lorem ipsum dolor sit amet consectetur
                                         adipisicing elit. At
                                         minima
                                         magnam sed aliquid vitae
@@ -490,7 +490,7 @@
                                 </svg>
                                 <div class="flex flex-col gap-2 mt-4">
                                     <span class="font-medium text-white">Formations</span>
-                                    <span class="text-gray-300 text-sm">Lorem ipsum dolor sit amet consectetur
+                                    <span class="text-gray-100 text-sm">Lorem ipsum dolor sit amet consectetur
                                         adipisicing elit. At
                                         minima
                                         magnam sed aliquid vitae
@@ -670,7 +670,7 @@
                                 </svg>
                                 <div class="flex flex-col gap-2 mt-4">
                                     <span class="font-medium text-white">Formations</span>
-                                    <span class="text-gray-300 text-sm">Lorem ipsum dolor sit amet consectetur
+                                    <span class="text-gray-100 text-sm">Lorem ipsum dolor sit amet consectetur
                                         adipisicing elit. At
                                         minima
                                         magnam sed aliquid vitae
@@ -850,7 +850,7 @@
                                 </svg>
                                 <div class="flex flex-col gap-2 mt-4">
                                     <span class="font-medium text-white">Formations</span>
-                                    <span class="text-gray-300 text-sm">Lorem ipsum dolor sit amet consectetur
+                                    <span class="text-gray-100 text-sm">Lorem ipsum dolor sit amet consectetur
                                         adipisicing elit. At
                                         minima
                                         magnam sed aliquid vitae
@@ -879,10 +879,6 @@
                 Nullam sit amet justo nec risus gravida vehicula.
                 Phasellus sit amet diam sed arcu. Fusce ut nunc in ipsum. Vivamus eget justo eu nisl dignissim vehicula
                 sit ametnecsapien.Nullam.</p>
-            <p class="text-gray-900">Lorem ipsum dolor sit amet, consectetur adipiscing elit..
-                Nullam sit amet justo nec risus gravida vehicula.
-                Phasellus sit amet diam sed arcu. Fusce ut nunc in ipsum. Vivamus eget justo eu nisl dignissim vehicula
-                sit ametnecsapien.Nullam.</p>
             <div class="flex">
                 <a href="#contact-us"
                     class="bg-background text-sm px-4 xl:px-6 py-3 xl:py-4 rounded-full text-white font-medium">Nous
@@ -893,7 +889,7 @@
             <img class="h-full w-full object-cover" src="./images/hero.png" alt="Illustration">
         </div>
     </div>
-    <div class="px-4 md:px-8 xl:px-32 py:12 md:py-24 mt-12 md:mt-0">
+    <div class="px-4 md:px-8 xl:px-32 py:12 md:py-24 mt-12 md:mt-0 overflow-hidden">
         <div class="xl:w-2/3 mx-auto text-center flex flex-col gap-4">
             <h2 class="text-black font-bold text-3xl md:text-4xl">Young leaders en images</h2>
             <p class="text-gray-900">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
@@ -901,14 +897,14 @@
             </p>
         </div>
         <div class="hidden md:grid grid-cols-3 gap-4 mt-4 md:mt-12">
-            <img class="col-span-2 w-full h-[30rem] object-cover rounded-2xl" src="./images/hero.png" alt="">
-            <img class="col-span-1 w-full h-[30rem] object-cover rounded-2xl" src="./images/hero.png" alt="">
+            <img class="col-span-2 w-full h-[22rem] object-cover rounded-2xl" src="./images/hero.png" alt="">
+            <img class="col-span-1 w-full h-[22rem] object-cover rounded-2xl" src="./images/hero.png" alt="">
             <img class="col-span-1 w-full h-[20rem] object-cover rounded-2xl" src="./images/hero.png" alt="">
             <img class="col-span-1 w-full h-[20rem] object-cover rounded-2xl" src="./images/hero.png" alt="">
             <img class="col-span-1 w-full h-[20rem] object-cover rounded-2xl" src="./images/hero.png" alt="">
         </div>
         <div class="swiper-images mt-8 flex md:hidden">
-            <div class="swiper-wrapper flex ml-6">
+            <div class="swiper-wrapper">
                 <div class="swiper-slide rounded-2xl">
                     <img class="col-span-1 w-full h-[20rem] object-cover rounded-2xl" src="./images/hero.png" alt="">
                 </div>
@@ -921,33 +917,33 @@
             </div>
         </div>
     </div>
-    <div class="py-4 md:py-12">
+    <div class="py-12">
         <div class="md:w-2/3 mx-auto text-center flex flex-col gap-4">
             <h2 class="text-black font-bold text-3xl md:text-4xl">Nos partenaires</h2>
             <p class="text-gray-900">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                 Ipsum has. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
             </p>
         </div>
-        <div class="flex md:px-8 2xl:px-32 gap-4 justify-center items-center mt-12">
+        <div class="flex md:px-8 2xl:px-32 gap-4 justify-center items-center mt-6">
             <div class="swiper">
-                <div class="swiper-wrapper px-4">
+                <div class="swiper-wrapper px-4 xl:px-0">
                     <div class="swiper-slide">
-                        <div class="w-32 md:h-44 h-32 md:w-44 rounded-full bg-[#3AA6D1]"></div>
+                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="w-32 md:h-44 h-32 md:w-44 rounded-full bg-[#3AA6D1]"></div>
+                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="w-32 md:h-44 h-32 md:w-44 rounded-full bg-[#3AA6D1]"></div>
+                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="w-32 md:h-44 h-32 md:w-44 rounded-full bg-[#3AA6D1]"></div>
+                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="w-32 md:h-44 h-32 md:w-44 rounded-full bg-[#3AA6D1]"></div>
+                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="w-32 md:h-44 h-32 md:w-44 rounded-full bg-[#3AA6D1]"></div>
+                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                 </div>
             </div>
@@ -994,8 +990,8 @@
             <p class="text-gray-900">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                 Ipsum has been the industry's standard.</p>
         </div>
-        <div class="mt-12 grid grid-cols-1 xld:grid-cols-2 gap-4">
-            <div class="flex flex-col gap-3">
+        <div class="mt-12 grid grid-cols-1 xl:grid-cols-2 gap-4">
+            <div class="flex flex-col gap-3 justify-between">
                 <input class="bg-[#f0f0f0] p-4 rounded-full" placeholder="Nom" type="text">
                 <input class="bg-[#f0f0f0] p-4 rounded-full" placeholder="Adresse email" type="text">
                 <textarea class="bg-[#f0f0f0] p-4 rounded-3xl" placeholder="Votre message" name="" id="" cols="30"
