--- a/index.html
+++ b/index.html
@@ -928,22 +928,22 @@
             <div class="swiper">
                 <div class="swiper-wrapper px-4 xl:px-0">
                     <div class="swiper-slide">
-                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
+                        <div class="w-auto h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
+                        <div class="w-auto h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
+                        <div class="w-auto h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
+                        <div class="w-auto h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
+                        <div class="w-auto h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="w-44 xl:w-48 h-44 rounded bg-[#3AA6D1]"></div>
+                        <div class="w-auto h-44 rounded bg-[#3AA6D1]"></div>
                     </div>
                 </div>
             </div>
